--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx sass ./src/style.scss ./dist/style.css & cp ./src/index.html ./dist/index.html",
+    "start": "npx sass ./src/style.scss ./dist/style.css --watch"
   },
   "repository": {
     "type": "git",
